task manager app

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="text" placeholder="add a task" name="content" id="content" />
                 <div class="due-date">
                     <h4>Due Date</h4>
-                    <input type="date" id="date-field" />
+                    <input type="date" name="date" id="date-field" />
                 </div>
 
                 <h4>Choose category</h4>
